# passmate

./: AGENTS.md  CLAUDE.md  README.md  README.rst  pyproject.toml
docs/: conf.py  config.rst  database.rst  getting_started.rst  index.rst  security.rst  sync.rst
passmate/: __init__.py  __main__.py  busy_spinner.py  cli.py  config.py  confirm_yes_no.py  container.py  generate.py  migrate_v1.py  pathtree.py  raw_db.py  read_passphrase.py  session.py  shell.py
tests/: __init__.py  start_session.py  test_merge.py  test_pathtree.py  test_raw_db.py  test_raw_db_merge.py  test_session.py  test_session_starter.py  test_shell.py  test_sync_summary.py
